settings complete, statistic added

--- a/lesetraining/README
+++ b/lesetraining/README
@@ -7,3 +7,6 @@ ignore error "Plugin execution not covered by lifecycle configuration: org.codeh
 make sure you have unzipped C:\Users\mkessler\.m2\repository\com\google\appengine\appengine-java-sdk\1.8.1
 make sure you have added jdk to eclipse.ini/sts.ini: -vm C:\Program Files\Java\jdk1.7.0_01\bin\javaw.exe
 try it on leseprogramm-new.appspot.com/ApplicationScaffold.html
+make sure eclipse datanucleus and auto-enhancer is enabled for project or run "datanucleus enhancer setting"
+run mvn gwt:run, but do not launch url, then run as google web app on a different port (otherwise spring-web is not available for some strange reason)
+	
