--- a/lesetraining/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/lesetraining/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,13 +1,86 @@
-#Updated at Thu Jul 04 23:12:57 CEST 2013
-#Thu Jul 04 23:12:57 CEST 2013
+#Updated at Mon Aug 05 23:58:27 CEST 2013
+#Mon Aug 05 23:58:27 CEST 2013
 application_name=Lesetraining
 label_ch_dreamweb_domain_setting=Setting
+label_ch_dreamweb_domain_setting_enabletest=Enabletest
+label_ch_dreamweb_domain_setting_enabletraining=Enabletraining
 label_ch_dreamweb_domain_setting_id=Id
 label_ch_dreamweb_domain_setting_login=Login
+label_ch_dreamweb_domain_setting_password=Password
 label_ch_dreamweb_domain_setting_plural=Settings
+label_ch_dreamweb_domain_setting_schoolclass=Schoolclass
+label_ch_dreamweb_domain_setting_soundfiletype=Soundfiletype
+label_ch_dreamweb_domain_setting_t1done=T1done
+label_ch_dreamweb_domain_setting_t1highestdaylevel=T1highestdaylevel
+label_ch_dreamweb_domain_setting_t1highestdaystep=T1highestdaystep
+label_ch_dreamweb_domain_setting_t1highestlevel=T1highestlevel
+label_ch_dreamweb_domain_setting_t1higheststep=T1higheststep
+label_ch_dreamweb_domain_setting_t1level=T1level
+label_ch_dreamweb_domain_setting_t1prestime=T1prestime
+label_ch_dreamweb_domain_setting_t1step=T1step
+label_ch_dreamweb_domain_setting_t1stepsperlevel=T1stepsperlevel
+label_ch_dreamweb_domain_setting_t1tottime=T1tottime
+label_ch_dreamweb_domain_setting_t2done=T2done
+label_ch_dreamweb_domain_setting_t2highestdaylevel=T2highestdaylevel
+label_ch_dreamweb_domain_setting_t2highestdaystep=T2highestdaystep
+label_ch_dreamweb_domain_setting_t2highestlevel=T2highestlevel
+label_ch_dreamweb_domain_setting_t2higheststep=T2higheststep
+label_ch_dreamweb_domain_setting_t2level=T2level
+label_ch_dreamweb_domain_setting_t2prestime=T2prestime
+label_ch_dreamweb_domain_setting_t2step=T2step
+label_ch_dreamweb_domain_setting_t2stepsperlevel=T2stepsperlevel
+label_ch_dreamweb_domain_setting_t2tottime=T2tottime
+label_ch_dreamweb_domain_setting_t3done=T3done
+label_ch_dreamweb_domain_setting_t3highestdaylevel=T3highestdaylevel
+label_ch_dreamweb_domain_setting_t3highestdaystep=T3highestdaystep
+label_ch_dreamweb_domain_setting_t3highestlevel=T3highestlevel
+label_ch_dreamweb_domain_setting_t3higheststep=T3higheststep
+label_ch_dreamweb_domain_setting_t3level=T3level
+label_ch_dreamweb_domain_setting_t3prestime=T3prestime
+label_ch_dreamweb_domain_setting_t3step=T3step
+label_ch_dreamweb_domain_setting_t3stepsperlevel=T3stepsperlevel
+label_ch_dreamweb_domain_setting_t3tottime=T3tottime
+label_ch_dreamweb_domain_setting_t4done=T4done
+label_ch_dreamweb_domain_setting_t4highestdaylevel=T4highestdaylevel
+label_ch_dreamweb_domain_setting_t4highestdaystep=T4highestdaystep
+label_ch_dreamweb_domain_setting_t4highestlevel=T4highestlevel
+label_ch_dreamweb_domain_setting_t4higheststep=T4higheststep
+label_ch_dreamweb_domain_setting_t4level=T4level
+label_ch_dreamweb_domain_setting_t4prestime=T4prestime
+label_ch_dreamweb_domain_setting_t4step=T4step
+label_ch_dreamweb_domain_setting_t4stepsperlevel=T4stepsperlevel
+label_ch_dreamweb_domain_setting_t4tottime=T4tottime
+label_ch_dreamweb_domain_setting_test1record=Test1record
+label_ch_dreamweb_domain_setting_test2record=Test2record
+label_ch_dreamweb_domain_setting_test3record=Test3record
+label_ch_dreamweb_domain_setting_test4record=Test4record
+label_ch_dreamweb_domain_setting_test5record=Test5record
+label_ch_dreamweb_domain_setting_test6record=Test6record
+label_ch_dreamweb_domain_setting_testday=Testday
+label_ch_dreamweb_domain_setting_testnumber=Testnumber
+label_ch_dreamweb_domain_setting_testround=Testround
 label_ch_dreamweb_domain_setting_version=Version
+label_ch_dreamweb_domain_statistic=Statistic
+label_ch_dreamweb_domain_statistic_averagelevelright=Averagelevelright
+label_ch_dreamweb_domain_statistic_datetime=Datetime
+label_ch_dreamweb_domain_statistic_highestlevelindex=Highestlevelindex
+label_ch_dreamweb_domain_statistic_history=History
+label_ch_dreamweb_domain_statistic_id=Id
+label_ch_dreamweb_domain_statistic_levelsum=Levelsum
+label_ch_dreamweb_domain_statistic_levelsumright=Levelsumright
+label_ch_dreamweb_domain_statistic_login=Login
+label_ch_dreamweb_domain_statistic_plural=Statistics
+label_ch_dreamweb_domain_statistic_rightexercices=Rightexercices
+label_ch_dreamweb_domain_statistic_stepsperlevel=Stepsperlevel
+label_ch_dreamweb_domain_statistic_trainingday=Trainingday
+label_ch_dreamweb_domain_statistic_unit=Unit
+label_ch_dreamweb_domain_statistic_version=Version
+label_ch_dreamweb_domain_statistic_wrongexercices=Wrongexercices
 menu_category_seleniumtests_label=Selenium Tests
 menu_category_setting_label=Setting
+menu_category_statistic_label=Statistic
 menu_item_seleniumtests_test_label=Test
 menu_item_setting_list_label=Settings
 menu_item_setting_new_label=Setting
+menu_item_statistic_list_label=Statistics
+menu_item_statistic_new_label=Statistic
