--- a/lesetraining/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/lesetraining/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Mon Aug 05 23:58:27 CEST 2013
-#Mon Aug 05 23:58:27 CEST 2013
+#Updated at Sun Sep 08 19:27:42 CEST 2013
+#Sun Sep 08 19:27:42 CEST 2013
 application_name=Lesetraining
 label_ch_dreamweb_domain_setting=Setting
 label_ch_dreamweb_domain_setting_enabletest=Enabletest
@@ -76,11 +76,35 @@ label_ch_dreamweb_domain_statistic_trainingday=Trainingday
 label_ch_dreamweb_domain_statistic_unit=Unit
 label_ch_dreamweb_domain_statistic_version=Version
 label_ch_dreamweb_domain_statistic_wrongexercices=Wrongexercices
+label_ch_dreamweb_domain_teststatistic=Test Statistic
+label_ch_dreamweb_domain_teststatistic_averagelevelright=Averagelevelright
+label_ch_dreamweb_domain_teststatistic_datetime=Datetime
+label_ch_dreamweb_domain_teststatistic_highestlevelindex=Highestlevelindex
+label_ch_dreamweb_domain_teststatistic_history=History
+label_ch_dreamweb_domain_teststatistic_id=Id
+label_ch_dreamweb_domain_teststatistic_levelsum=Levelsum
+label_ch_dreamweb_domain_teststatistic_levelsumright=Levelsumright
+label_ch_dreamweb_domain_teststatistic_login=Login
+label_ch_dreamweb_domain_teststatistic_plural=Test Statistics
+label_ch_dreamweb_domain_teststatistic_rightexercices=Rightexercices
+label_ch_dreamweb_domain_teststatistic_spanscore=Spanscore
+label_ch_dreamweb_domain_teststatistic_stepsperlevel=Stepsperlevel
+label_ch_dreamweb_domain_teststatistic_test=Test
+label_ch_dreamweb_domain_teststatistic_testround=Testround
+label_ch_dreamweb_domain_teststatistic_trainingday=Trainingday
+label_ch_dreamweb_domain_teststatistic_trialscore=Trialscore
+label_ch_dreamweb_domain_teststatistic_trialscore_version=Trialscore_version
+label_ch_dreamweb_domain_teststatistic_unit=Unit
+label_ch_dreamweb_domain_teststatistic_version=Version
+label_ch_dreamweb_domain_teststatistic_wrongexercices=Wrongexercices
 menu_category_seleniumtests_label=Selenium Tests
 menu_category_setting_label=Setting
 menu_category_statistic_label=Statistic
+menu_category_teststatistic_label=Test Statistic
 menu_item_seleniumtests_test_label=Test
 menu_item_setting_list_label=Settings
 menu_item_setting_new_label=Setting
 menu_item_statistic_list_label=Statistics
 menu_item_statistic_new_label=Statistic
+menu_item_teststatistic_list_label=Test Statistics
+menu_item_teststatistic_new_label=Test Statistic
